--- a/Send_FMC_notification.ipynb
+++ b/Send_FMC_notification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0H/2ncfZi6AFRzZ5LKWpH",
+      "authorship_tag": "ABX9TyNhReD8RMirihC5e8ybTPGF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ksaurabh4/send_fmc_notification/blob/main/Send_FMC_notification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ksaurabh4/fcm-http-v1-notification-sender/blob/main/Send_FMC_notification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -49,6 +49,9 @@
       "source": [
         "# ===============================================\n",
         "#          FCM HTTP v1 Notification Sender\n",
+        "#          Author  : Kumar Saurabh\n",
+        "#          Version : v1.0\n",
+        "#          License : MIT\n",
         "# ===============================================\n",
         "\n",
         "# Install required packages\n",
